# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.332 2005/09/13 15:39:28 wolf31o2 Exp $

  13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Changing source_subpath for livecd-stage2 example for bug #101704.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec, modules/livecd_stage2_target.py,
  targets/support/livecdfs-update.sh:
  Added livecd/xdm and livecd/xsession options. These are used to setup the
  default display manager and X session, respectively. Added supporting
  documentation to example spec files. Imported more work from my fsscript for
  the official LiveCD.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changing default CHOST for x86 from i386-pc-linux to i686-pc-linux. For
  discussion, see bug #88777.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, +arch/sh.py,
  modules/generic_stage_target.py:
  Added sh architecture to supported architectures. Thanks to Matsuu Takuto
  <matsuu@gentoo.org> for the patch. Closing bug #105693.

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Add code to dump grppkgs.txt file on livecd-stage1 and kernelpkgs.txt file
  on livecd-stage2 and removing universal motd for livecd/type of
  gentoo-release-livecd.

  08 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Add optional livecd/type env var for scripts to add optional items to the
  scripts

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/files/x86-help.msg:
  Removing x86-help.msg as it is no longer used.

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/README.txt, livecd/files/x86-F3.msg, livecd/files/x86-F4.msg,