@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.332 2005/09/13 15:39:28 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.333 2005/09/15 14:31:58 rocket Exp $
+
+  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage2_target.py:
+  Append slashes to directories so rsyncs work properly
 
   13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/livecd-stage2_template.spec:
